# modbus-control

./: .env.example  .gitignore  PRD.md  README.md  devices.yaml  pyproject.toml  scratch_inspect.py
